# nwg-drawer

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  sonar-project.properties
data/nwg-drawer/: drawer.css
docs/: code-review-2026-05.md
src/: activate.rs  config.rs  desktop_loader.rs  lifecycle.rs  listeners.rs  main.rs  power_bar_detect.rs  state.rs  watcher.rs  xdg_dirs.rs
src/assets/: drawer.css
src/listeners/: commands.rs
src/ui/: app_grid.rs  categories.rs  constants.rs  file_search.rs  math.rs  math_widget.rs  mod.rs  navigation.rs  pin_ops.rs  pinned.rs  power_bar.rs  search.rs  search_handler.rs  well_builder.rs  well_context.rs  widgets.rs  window.rs
