[package]
name = "nwg-drawer"
version = "0.4.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
description = "Launchpad-style application launcher for Hyprland, Sway, and any Wayland compositor with layer-shell. Rust port with shared pin file with nwg-dock, file search, math evaluation, and graceful fallback on unsupported compositors (Niri, river, Openbox)."
readme = "README.md"
repository = "https://github.com/jasonherald/nwg-drawer"
keywords = ["hyprland", "sway", "launcher", "wayland", "gtk4"]
categories = ["gui", "command-line-utilities"]

[[bin]]
name = "nwg-drawer"
path = "src/main.rs"

[dependencies]
# Shared library (library + binaries all on the 0.3.x line)
nwg-common = "0.5"

# GTK4 + Wayland layer shell
gtk4 = "0.10"
gtk4-layer-shell = "0.7"

# Serialization (preferred-apps config, pin-file format)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# File watching (CSS hot-reload, pin-file inotify)
notify = "8"

# Unix signals
nix = { version = "0.31", features = ["signal", "process", "fs"] }

# Math expression evaluation (search-bar calculator).
# Migrated off `meval` because its nom 1.2.4 transitive dep was unmaintained.
exmex = "0.20"

# Cross-thread → glib-main-loop event channel for the inotify watcher and
# the signal-handler bridge. Replaces the 100 ms `timeout_add_local`
# polling pattern with sub-ms event delivery via `glib::spawn_future_local`
# + `recv().await`. (`glib::MainContext::channel` is deprecated in glib
# 0.21 in favor of executor-agnostic async channels.)
async-channel = "2"

[dev-dependencies]
# Filesystem fixtures for unit tests (walk_directory, etc.).
tempfile = "3"
